--- a/src/pages/en/index.html
+++ b/src/pages/en/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristina Fuentes - Frontend Developer & Accessibility Specialist</title>
     <meta name="description" content="Cristina Fuentes Portfolio - Frontend Developer specialized in web accessibility and data analysis">
-    <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="../../../assets/css/main.css">
 </head>
 <body>
 <!-- Skip Link -->
 <a href="#main-content" class="skip-link">
     <span class="skip-icon">⚡</span>
-    Skip to content
+    <span class="skip-text">Skip to content</span>
 </a>
 
 <!-- Navigation -->
@@ -20,7 +20,7 @@
         <div class="nav-brand">
             <a href="index.html" class="brand-link">
                 <h1>Cristina Fuentes</h1>
-                <img src="../../assets/icons/gb.svg" alt="English" class="language-flag">
+                <img src="../../../assets/icons/gb.svg" alt="English" class="language-flag">
             </a>
         </div>
 
@@ -45,19 +45,19 @@
                 <ul class="dropdown-menu" aria-labelledby="language-toggle">
                     <li>
                         <a href="../es/index.html" class="dropdown-item" data-lang="es">
-                            <img src="../../assets/icons/es-variant.svg" alt="Español" class="flag-icon">
+                            <img src="../../../assets/icons/es-variant.svg" alt="Español" class="flag-icon">
                             Spanish
                         </a>
                     </li>
                     <li>
                         <a href="index.html" class="dropdown-item active" data-lang="en">
-                            <img src="../../assets/icons/gb.svg" alt="English" class="flag-icon">
+                            <img src="../../../assets/icons/gb.svg" alt="English" class="flag-icon">
                             English
                         </a>
                     </li>
                     <li>
                         <a href="../fr/index.html" class="dropdown-item" data-lang="fr">
-                            <img src="../../assets/icons/fr.svg" alt="Français" class="flag-icon">
+                            <img src="../../../assets/icons/fr.svg" alt="Français" class="flag-icon">
                             French
                         </a>
                     </li>
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="hero-profile">
                 <div class="profile-image-container">
-                    <img src="../../assets/images/foto-perfil.jpg" alt="Cristina Fuentes photo" class="profile-image">
+                    <img src="../../../assets/images/foto-perfil.jpg" alt="Cristina Fuentes photo" class="profile-image">
                 </div>
                 <div class="hero-content">
                     <h1 id="hero-title" class="hero-title">
@@ -110,11 +110,11 @@
 </footer>
 
 <!-- JavaScript -->
-<script src="../../assets/js/navigation.js"></script>
-<script src="../../assets/js/dropdowns.js"></script>
-<script src="../../assets/js/theme-manager.js"></script>
-<script src="../../assets/js/accessibility.js"></script>
-<script src="../../assets/js/footer.js"></script>
-<script src="../../assets/js/particles.js"></script>
+<script src="../../../assets/js/navigation.js"></script>
+<script src="../../../assets/js/dropdowns.js"></script>
+<script src="../../../assets/js/theme-manager.js"></script>
+<script src="../../../assets/js/accessibility.js"></script>
+<script src="../../../assets/js/footer.js"></script>
+<script src="../../../assets/js/particles.js"></script>
 </body>
 </html>
