--- a/src/pages/es/index.html
+++ b/src/pages/es/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristina Fuentes - Desarrolladora Frontend & Especialista en Accesibilidad</title>
     <meta name="description" content="Portfolio de Cristina Fuentes - Desarrolladora Frontend especializada en accesibilidad web y análisis de datos">
-    <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="../../../assets/css/main.css">
 </head>
 <body>
 <!-- Skip Link -->
 <a href="#main-content" class="skip-link">
     <span class="skip-icon">⚡</span>
     Saltar al contenido
+    <span class="skip-text">Saltar al contenido</span>
 </a>
 
 <!-- Navegación -->
@@ -22,7 +23,7 @@
         <div class="nav-brand">
             <a href="index.html" class="brand-link">
                 <h1>Cristina Fuentes</h1>
-                <img src="../../assets/icons/es-variant.svg" alt="Español" class="language-flag">
+                <img src="../../../assets/icons/es-variant.svg" alt="Español" class="language-flag">
             </a>
         </div>
 
@@ -49,19 +50,19 @@
                 <ul class="dropdown-menu" aria-labelledby="language-toggle">
                     <li>
                         <a href="index.html" class="dropdown-item active" data-lang="es">
-                            <img src="../../assets/icons/es-variant.svg" alt="Español" class="flag-icon">
+                            <img src="../../../assets/icons/es-variant.svg" alt="Español" class="flag-icon">
                             Español
                         </a>
                     </li>
                     <li>
                         <a href="../en/index.html" class="dropdown-item" data-lang="en">
-                            <img src="../../assets/icons/gb.svg" alt="English" class="flag-icon">
+                            <img src="../../../assets/icons/gb.svg" alt="English" class="flag-icon">
                             English
                         </a>
                     </li>
                     <li>
                         <a href="../fr/index.html" class="dropdown-item" data-lang="fr">
-                            <img src="../../assets/icons/fr.svg" alt="Français" class="flag-icon">
+                            <img src="../../../assets/icons/fr.svg" alt="Français" class="flag-icon">
                             Français
                         </a>
                     </li>
@@ -236,7 +237,7 @@
         <div class="container">
             <div class="hero-profile">
                 <div class="profile-image-container">
-                    <img src="../../assets/images/foto-perfil.jpg" alt="Foto de Cristina Fuentes" class="profile-image">
+                    <img src="../../../assets/images/foto-perfil.jpg" alt="Foto de Cristina Fuentes" class="profile-image">
                 </div>
                 <div class="hero-content">
                     <h1 id="hero-title" class="hero-title">
@@ -306,11 +307,11 @@
 </div>
 
 <!-- JavaScript -->
-<script src="../../assets/js/navigation.js"></script>
-<script src="../../assets/js/dropdowns.js"></script>
-<script src="../../assets/js/theme-manager.js"></script>
-<script src="../../assets/js/accessibility.js"></script>
-<script src="../../assets/js/footer.js"></script>
-<script src="../../assets/js/particles.js"></script>
+<script src="../../../assets/js/navigation.js"></script>
+<script src="../../../assets/js/dropdowns.js"></script>
+<script src="../../../assets/js/theme-manager.js"></script>
+<script src="../../../assets/js/accessibility.js"></script>
+<script src="../../../assets/js/footer.js"></script>
+<script src="../../../assets/js/particles.js"></script>
 </body>
 </html>
