Ajustar skip-icon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Skip Link corregido -->
 <a href="#main-content" class="skip-link">
     <span class="skip-icon">⚡</span>
-    <span class="skip-text">Saltar al contenido</span>
+    <span class="skip-text"></span>
 </a>
 
 <!-- Navegación simplificada para landing -->
