modularización js completa

--- a/index.html
+++ b/index.html
@@ -140,7 +140,6 @@
 </footer>
 
 <!-- JavaScript específico para landing -->
-<script src="assets/js/landing-navigation.js"></script>
-<script src="assets/js/footer.js"></script>
+<script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
