--- a/src/pages/en/index.html
+++ b/src/pages/en/index.html
@@ -110,11 +110,5 @@
 </footer>
 
 <!-- JavaScript -->
-<script src="../../../assets/js/navigation.js"></script>
-<script src="../../../assets/js/dropdowns.js"></script>
-<script src="../../../assets/js/theme-manager.js"></script>
-<script src="../../../assets/js/accessibility.js"></script>
-<script src="../../../assets/js/footer.js"></script>
-<script src="../../../assets/js/particles.js"></script>
-</body>
+<script type="module" src="assets/js/main.js"></script>
 </html>
