--- a/src/pages/es/index.html
+++ b/src/pages/es/index.html
@@ -326,11 +326,6 @@
 </div>
 
 <!-- JavaScript -->
-<script src="../../../assets/js/navigation.js"></script>
-<script src="../../../assets/js/dropdowns.js"></script>
-<script src="../../../assets/js/theme-manager.js"></script>
-<script src="../../../assets/js/accessibility.js"></script>
-<script src="../../../assets/js/footer.js"></script>
-<script src="../../../assets/js/particles.js"></script>
+<script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
