correccion de rutas

--- a/index.html
+++ b/index.html
@@ -140,6 +140,6 @@
 </footer>
 
 <!-- JavaScript específico para landing -->
-<script type="module" src="assets/js/main.js"></script>
+<script type="module" src="../../../assets/js/main.js"></script>
 </body>
 </html>
