--- a/src/pages/es/index.html
+++ b/src/pages/es/index.html
@@ -326,6 +326,6 @@
 </div>
 
 <!-- JavaScript -->
-<script type="module" src="assets/js/main.js"></script>
+<script type="module" src="../../../assets/js/main.js"></script>
 </body>
 </html>
