--- a/src/pages/en/index.html
+++ b/src/pages/en/index.html
@@ -110,5 +110,5 @@
 </footer>
 
 <!-- JavaScript -->
-<script type="module" src="assets/js/main.js"></script>
+<script type="module" src="../../../assets/js/main.js"></script>
 </html>
