--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Cristina Fuentes - Desarrolladora Frontend & Especialista en Accesibilidad</title>
     <meta name="description" content="Portfolio de Cristina Fuentes - Desarrolladora Frontend especializada en accesibilidad web y análisis de datos">
     <link rel="stylesheet" href="assets/css/main.css">
+    <!-- FAVICON -->
+    <link rel="icon" href="assets/icons/favicon.ico">
 </head>
 <body>
 <!-- Skip Link corregido -->
@@ -139,7 +141,7 @@
     </div>
 </footer>
 
-<!-- JavaScript específico para landing -->
-<script type="module" src="/assets/js/main.js"></script>
+<!-- JavaScript -->
+<script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
