--- a/src/pages/es/index.html
+++ b/src/pages/es/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristina Fuentes - Desarrolladora Frontend & Especialista en Accesibilidad</title>
     <meta name="description" content="Portfolio de Cristina Fuentes - Desarrolladora Frontend especializada en accesibilidad web y análisis de datos">
-    <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="../../../assets/css/main.css">
     <!-- FAVICON -->
     <link rel="icon" href="assets/icons/favicon.ico">
 </head>
@@ -329,6 +329,6 @@
 </div>
 
 <!-- JavaScript -->
-<script type="module" src="../../assets/js/main.js"></script>
+<script type="module" src="../../../assets/js/main.js"></script>
 </body>
 </html>
